--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "start": "start http://localhost:8000 && node server.js"
+      "start": "node server.js"
    },
    "keywords": [],
    "author": "",
